-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 7.0.0, Qt Creator 7.0.1
-
None
-
Operating System: Manjaro Linux
KDE Plasma Version: 5.24.5
KDE Frameworks Version: 5.93.0
Qt Version: 5.15.3
Kernel Version: 5.16.20-2-MANJARO (64-bit)
Graphics Platform: X11
-
d80a713b89 (qt-creator/qt-creator/8.0) d80a713b89 (qt-creator/qt-creator/master)
In previous versions, the order of snippets came first in the auto completions popup, but in versions starting from 7.*, the order of snippets is last.
| For Gerrit Dashboard: QTCREATORBUG-27566 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 416131,2 | LanguageClient: move relevant snippets to the front | 8.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |