LanguageClient: move relevant snippets to the front

If a snippet starts with the current prefix move it to the front of the
proposed completions.

Fixes: QTCREATORBUG-27566
Change-Id: I568d34e4da596a8cf4f08eb88eb1ee865edbed70
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>